<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/watch_live_tv_here"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textSize="30sp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
        <!-- somoy & jamuna-->
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/somoyTvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/shomoy_tv"
                 android:src="@drawable/somoy_tv_logo"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/jamunaTvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/jamuna_tv"
                 android:src="@drawable/jamuna_tv_live"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
         <!-- indipendent & dbc-->
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/independentTvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/independent_tv"
                 android:src="@drawable/independent_logo"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/dbcTvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/dbc_news"
                 android:src="@drawable/dbc_news_logo"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
         <!-- chanel24 & atn news-->
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/channel24TvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/channel_24"
                 android:src="@drawable/channel_24_logo"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/atnNewsTvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/atn_news"
                 android:src="@drawable/atn_news_logo"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
         &lt;!&ndash; chanel24 & atn news&ndash;&gt;
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/sonyTen1TvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/channel_24"
                 android:src="@drawable/channel_24_logo"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="120dp"
             android:layout_weight="1"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
             android:layout_gravity="center"
             app:cardBackgroundColor="@color/primary_bg">
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/sonyTen2TvCV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="@string/sony_sports_ten_2"
                 android:src="@drawable/sony_ten_sports_2"
                 android:scaleType="fitXY"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>-->

</LinearLayout>